prevent header overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,6 +11,7 @@
 
 .root-wrapper {
   header {
+    z-index: 999;
     top: 0;
     left: 0;
     width: 100%;
